- PGN window : removed extra lines between moves and comments
- After closing a base, the current game is reseted
- After game searches (header, material or board), the first game of the filter is automatically loaded
- Fix : trying to repair a base already opened is now prohibited
- Fix : trying to play a tactical game with Phalanx absent would pop an uncaught exception (translation missing)
- Partial support for Tk 8.5 added
- Play on internet : a digital clock is displayed inside the analog clock (seems required for blitz games)
- Windows release : Tcl/Tk is upgraded to version 8.5, so latest piece sets (with transparency effects) are correctly displayed
- Fix : Scid could crash when generating an opening report from a huge base from particular positions. Bug introduced with Scid 3.6.21 and fixed now (buffer overflow due to moves translation in OpLine::PrintMove)
- Pocket PC : 
	* Greko upgraded to 5.9 and then to 6.0 ... (5.7.1 and 5.9 versions were buggy)
	* Scidlet added as new engine (also added xboard commands "analyze" and "exit" to Scidlet, but only for the PPC version)
	* Fix : manual draw adjudication when insufficient material (waited for ever for bestmove reply)
	* added insufficient material detection during engines tournament
- Fix : when playing on FICS or using a Novag Citrine board, entering moves with the keyboard was not send
- Fix : mouse position on squares was inaccurate (if border size was not set to 2), and entering moves sometimes difficult (see ::board::getSquare)
- Fix : exception handled after closing FICS window, and offers graph opened
- Fix : tactical game. When aborting a game, the engine used as coach is now correctly stopped. This could lead to an UI freeze in some cases.
- Tactical game : reworked user interface and some enhancements : parameters saving, ability to go back in game (thanks to Steven Atkinson)
- Serious game : reworked user interface (thanks to Steven Atkinson)