@@ -584,11 +584,10 @@ proc ::search::material {} {
     unbusyCursor .
     #tk_messageBox -type ok -title $::tr(SearchResults) -message $str
     .sm.status configure -text $str
-    # set glstart 1
-    # ::windows::gamelist::Refresh
+    set glstart 1
+    ::windows::gamelist::Refresh
     
-    # Go to the first game in the filter
-    ::game::Load [sc_filter first]
+    ::search::loadFirstGame
     
     ::windows::stats::Refresh
   }
