@@ -118,4 +118,9 @@ proc ::search::usefile {} {
   }
 }
 
-
+# will go to the first game found, except if the Tree of current base is opened (of there will be filter collision)
+proc ::search::loadFirstGame {} {
+    set w ".treeWin[sc_base current]"    
+    if {[winfo exists $w]} { return }    
+    ::game::Load [sc_filter first]
+}
