@@ -590,3 +590,8 @@ scid-3.6.26
 - Fix : tactical game. When aborting a game, the engine used as coach is now correctly stopped. This could lead to an UI freeze in some cases.
 - Tactical game : reworked user interface and some enhancements : parameters saving, ability to go back in game (thanks to Steven Atkinson)
 - Serious game : reworked user interface (thanks to Steven Atkinson)
+- Fix : Tree window 
+	* abort refreshing before closing the window
+	* after a search with Tree window opened for current base, don't load automatically first game in filter, or the Tree will be refreshed, overwriting the filter
+	
+	
